infra/apps/keycloak/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  host: keycloak.apps.snoaxolab.axodevelopment.dev
  port:
    targetPort: 8080
  to:
    kind: Service
    name: keycloak-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
